# ankole

./: .dockerignore  .env.dev  .env.local.example  .env.test  .formatter.exs  .gitattributes  .gitignore  .oxfmtrc.json  .oxlintrc.json  AGENTS.md  CONTRIBUTING.md  NOTICE  NOTICE.md  README.ja.md  README.md  README.zh-Hans.md  SECURITY.md  SUMMARY.md  ankole.code-workspace  biome.json  bunfig.toml  knip.config.ts  mix.exs  openapi-ts.config.ts  package.json  rsbuild.config.ts  tsconfig.base.json  tsconfig.tsbuildinfo  turbo.json
.claude/: settings.json
.codex/: config.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  computer-image-publish.yml  postgres-for-bullx-image-publish.yml
app/: .env.development  Dockerfile  components.json  drizzle.config.ts  package.json  tsconfig.json
app/agent_computer/: Dockerfile  README.md  package.json  tsconfig.json
app/agent_computer/native/: Cargo.toml
app/agent_computer/native/src/: main.rs
app/agent_computer_worker/: Dockerfile  package.json
app/ai_proxy/: package.json  tsconfig.json
app/control_plane/: .formatter.exs  mix.exs  package.json
app/db/: 20260603134342_initial_schema.sql  20260604043625_wooden_captain_flint.sql  20260604132036_ambiguous_omega_red.sql  20260606055257_secret_aaron_stack.sql  20260606123703_cloudy_darwin.sql  20260606194102_chemical_captain_britain.sql  20260608171802_modern_invisible_woman.sql  20260608182500_ai_agent_llm_trajectory.sql  20260608182505_scheduler_checkbacks.sql  20260609050209_familiar_mesmero.sql  20260610091307_init.sql  20260611111903_ambitious_pyro.sql  20260617160726_aberrant_mulholland_black.sql
app/kernel/: Cargo.toml  README.md  build.rs  index.d.ts  main.js  mix.exs  package.json  tsconfig.json
app/kernel/lib/ankole/: kernel.ex
app/kernel/lib/ankole/kernel/: actor_bus.ex  runtime_fabric.ex  universal_ai_client.ex
app/kernel/proto/ankole/actor_bus/v1/: envelope.proto
app/kernel/proto/ankole/runtime_fabric/v1/: envelope.proto
app/kernel/src/: lib.rs  napi_exports.rs  nif_exports.rs
app/kernel/src/actor_bus/: mod.rs  transport.rs
app/kernel/src/authz/: cel.rs  decision.rs  mod.rs  resource_pattern.rs
app/kernel/src/common/: crypto.rs  encoding.rs  error.rs  ids.rs  jwt.rs  mod.rs  zstd_block.rs
app/kernel/src/core/: crypto.rs  encoding.rs  error.rs  jwt.rs  mod.rs  phone.rs
app/kernel/src/runtime_fabric/: codec.rs  decode.rs  encode.rs  enums.rs  json.rs  mod.rs  tests.rs  transport.rs  validate.rs
app/kernel/src/runtime_fabric/transport/: auth.rs  config.rs  dealer.rs  error.rs  framing.rs  mod.rs  router.rs  tests.rs  types.rs
app/kernel/src/signals_gateway/: mod.rs
app/kernel/src/universal_ai_client/: api_resolver.rs  downstream.rs  error.rs  mod.rs  request_builder.rs  runtime.rs  spec.rs  transport.rs  wire.rs
app/kernel/src/universal_ai_client/api_resolver/: anthropic.rs  aws_bedrock_converse.rs  core.rs  embeddings.rs  google_embeddings.rs  google_gemini.rs  openai_chat.rs  openai_responses.rs  rerank.rs  standard.rs  tests.rs
app/kernel/src/universal_ai_client/client/: core.rs  stream.rs  tests.rs
app/kernel/test/: kernel.test.ts
app/kernel/test/ankole/: kernel_test.exs
app/locales/: zh-Hans-CN.toml
app/scripts/: build-web-assets.ts  computer-worker-e2e.ts  computer-worker-smoke.ts  llm-e2e.ts  runtime-credentials.ts  serenity-story.ts
app/src/: main.test.ts  main.ts
app/webapps/: openapi-ts.config.ts  package.json  tsconfig.json  vite.config.ts
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
config/support/: bootstrap.exs
docs/: Architecture.md  TradeoffsAndKnownLimits.md  architecture-audit-2026-06.md  bullx-vs-hermes-对照分析.md
docs/audits/: 2026-06-25-main-chain-alignment-audit.md
docs/design-docs/: AIGateway.md  AgenticLoop.md  AppConfiguration.md  AuthZ.md  Cache.md  Configuration.md  DiscordAdapter.md  Ext.md  FeishuAdapter.md  I18n.md  IMGateway.md  LLMProvider.md  MailBox.md  Plugins.md  Principal.md  RuntimeFabric.md  Schedule.md  Setup.md  SignalRouting.md  SignalsGateway.md  TelegramAdapter.md  ai-agent-pi-ai-multiturn-conversation.md  browser-runtime-camoufox-webwright.md  computer-runtime-baseline.md  external-gateway-provider-limitations.md  external-gateway.md
lib/: bullx_discord.ex  bullx_telegram.ex
lib/bullx/: ai_agent.ex  application.ex  authz.ex  cache.ex  config.ex  event_bus.ex  ext.ex  gateway.ex  health.ex  i18n.ex  im_gateway.ex  json.ex  llm.ex  mail_box.ex  plugins.ex  principals.ex  redis.ex  repo.ex  retry.ex  setup.ex
lib/bullx_discord/: adapter.ex  application_commands.ex  attention_policy.ex  cache.ex  channel.ex  config.ex  consumer.ex  delivery.ex  direct_command.ex  error.ex  event_mapper.ex  sso.ex  streamer.ex  thread_ownership.ex
lib/bullx_feishu/: adapter.ex  cache.ex  config.ex  delivery.ex  direct_command.ex  error.ex  sso.ex  streaming_card.ex
lib/bullx_gateway/: adapter_cache.ex  adapter_config.ex  adapter_error.ex  dedupe_key.ex  delivery.ex  scope_worker.ex  setup_context.ex
test/: test_helper.exs
tools/: e2e
(+3287 files in other folders)
