[package]
name = "ankole_kernel"
version = "0.1.0"
edition = "2024"
description = "Shared native kernel helpers for Ankole"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[features]
default = []
napi = ["dep:napi", "dep:napi-derive"]
nif = ["dep:rustler"]

[dependencies]
any_ascii = "0.3.3"
base64-simd = "0.8.0"
blake3 = "1.8.5"
bs58 = "0.5.1"
cel = "0.13.0"
chacha20poly1305 = "0.10.1"
crc32fast = "1.5.0"
globset = "0.4.18"
hex = "0.4.3"
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }
mimalloc = "0.1.52"
napi = { version = "3.9.1", default-features = false, features = ["napi10", "serde-json-ordered", "object_indexmap"], optional = true }
napi-derive = { version = "3.5.6", optional = true }
prost = "0.13.5"
rand = { version = "0.10.1", features = ["sys_rng"] }
rlibphonenumber = "1.1.4"
rustler = { version = "0.38.0", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
uuid = { version = "1.23.3", features = ["v4", "v7", "fast-rng"] }
zmq = "0.10.0"

[build-dependencies]
napi-build = "2.3.2"
prost-build = "0.13.5"

[profile.release]
lto = true
codegen-units = 1

[profile.dev]
incremental = true
