[package]
name = "ankole_kernel"
version = "0.1.0"
edition = "2024"
rust-version = "1.90"
description = "Shared native kernel helpers for Ankole"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[features]
default = []
embed = []
napi = ["dep:napi", "dep:napi-derive"]
nif = ["dep:rustler", "universal_ai_client"]
universal_ai_client = [
  "dep:bytes",
  "dep:futures-util",
  "dep:reqwest",
  "dep:tokio",
  "dep:tokio-tungstenite",
]

[dependencies]
any_ascii = "0.3.3"
base64-simd = "0.8.0"
blake3 = "1.8.5"
bs58 = "0.5.1"
bytes = { version = "1.11.0", optional = true }
cel = "0.13.0"
chacha20poly1305 = "0.10.1"
crc32fast = "1.5.0"
futures-util = { version = "0.3.31", default-features = false, features = ["sink", "std"], optional = true }
globset = "0.4.18"
hex = "0.4.3"
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }
mimalloc = "0.1.52"
napi = { version = "3.9.4", default-features = false, features = ["napi10", "serde-json-ordered", "object_indexmap"], optional = true }
napi-derive = { version = "3.5.7", optional = true }
prost = "0.14.4"
rand = { version = "0.10.1", features = ["sys_rng"] }
reqwest = { version = "0.13.4", default-features = false, features = ["rustls", "http2", "http3", "stream", "gzip", "brotli", "zstd"], optional = true }
rlibphonenumber = "2.2.5"
rustler = { version = "0.38.0", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sonic-rs = "0.5.8"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "sync", "time"], optional = true }
tokio-tungstenite = { version = "0.29.0", default-features = false, features = ["connect", "rustls-tls-native-roots"], optional = true }
uuid = { version = "1.23.4", features = ["v4", "v7", "fast-rng"] }
zmq = "0.10.0"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
zstd = "0.13"

[build-dependencies]
napi-build = "2.3.2"
prost-build = "0.14.4"

[profile.release]
lto = true
codegen-units = 1

[profile.dev]
incremental = true
