[package]
name = "ankole-agent-computerd"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ankole-agent-computerd"
path = "src/main.rs"

[dependencies]
ankole_kernel = { path = "../../kernel", features = ["embed"] }
postgres = "0.19.12"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
uuid = { version = "1.23.3", features = ["v4", "fast-rng"] }
